@@ -12,6 +12,7 @@
 #include "include/encode/SkEncoder.h"
 
 class SkWStream;
+struct skcms_ICCProfile;
 
 namespace SkWebpEncoder {
 
@@ -35,6 +36,16 @@ namespace SkWebpEncoder {
          */
         Compression fCompression = Compression::kLossy;
         float fQuality = 100.0f;
+
+        /**
+         * An optional ICC profile to override the default behavior.
+         *
+         * The default behavior is to generate an ICC profile using a primary matrix and
+         * analytic transfer function. If the color space of |src| cannot be represented
+         * in this way (e.g, it is HLG or PQ), then no profile will be embedded.
+         */
+        const skcms_ICCProfile* fICCProfile = nullptr;
+        const char* fICCProfileDescription = nullptr;
     };
 
     /**
