@@ -180,10 +180,16 @@ static inline void transform_scanline_F32_premul(char* dst, const char* src, int
           skcms_PixelFormat_RGBA_16161616BE, skcms_AlphaFormat_Unpremul);
 }
 
-static inline sk_sp<SkData> icc_from_color_space(const SkImageInfo& info) {
+static inline sk_sp<SkData> icc_from_color_space(const SkImageInfo& info,
+                                                 const skcms_ICCProfile* profile,
+                                                 const char* profile_description) {
     SkColorSpace* cs = info.colorSpace();
     if (!cs) {
         return nullptr;
+    }
+
+    if (profile) {
+        return SkWriteICCProfile(profile, profile_description);
     }
 
     skcms_Matrix3x3 toXYZD50;
